# esp32-junk

./: .gitignore  CMakeLists.txt  README.md
components/ili9341/: CMakeLists.txt  font5x7.h  font5x7_cyrillic.h  ili9341.c
components/ili9341/include/: ili9341.h
components/xpt2046/: CMakeLists.txt  xpt2046.c
components/xpt2046/include/: xpt2046.h
main/: CMakeLists.txt  Kconfig.projbuild  app_time.c  app_time.h  bluetooth.c  bluetooth.h  idf_component.yml  main.c  network.c  network.h  weather.c  weather.h  wifi.c  wifi.h
